# studyBoard

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  treefmt.nix
studyBoard/: manage.py
studyBoard/base/: models.py  urls.py  views.py
studyBoard/base/migrations/: 0001_initial.py  0002_topic_room_host_message_room_topic.py  0003_alter_room_options_room_participants.py
studyBoard/base/templates/base/: activity_component.html  delete.html  feed_component.html  home.html  login_register.html  profile.html  room.html
studyBoard/studyBoard/: asgi.py  settings.py  wsgi.py
studyBoard/templates/: main.html  navbar.html
