[tool.poetry]
name = "studyboard"
version = "0.1.0"
description = "forum site similar to stackoverflow"
authors = ["Baneet Parmar <baneetparmar7@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
